Rebrand vers AerisLauncher

--- a/app/assets/lang/en_US.json
+++ b/app/assets/lang/en_US.json
@@ -25,11 +25,11 @@
                 },
                 "authDown": {
                     "title": "Error During Login:<br>Authentication Server Offline",
-                    "desc": "Mojang's authentication server is currently offline or unreachable. Please wait a bit and try again. You can check the status of the server on <a href=\"https://help.mojang.com/\">Mojang's help portal</a>."
+                    "desc": "The authentication server is currently offline or unreachable. Please wait a bit and try again."
                 },
                 "notPaid": {
-                    "title": "Error During Login:<br>Game Not Purchased",
-                    "desc": "The account you are trying to login with has not purchased a copy of Minecraft.<br>You may purchase a copy on <a href=\"https://minecraft.net/\">Minecraft.net</a>"
+                    "title": "Error During Login:<br>Account disabled",
+                    "desc": "Your account was disabled, please contact the administrator."
                 },
                 "unknown": {
                     "title": "Error During Login:<br>Unknown Error"
